# vim-header

./: .drone.yml  .gitignore  .travis.yml  README.md  init.sh  pyproject.toml  setup.py
conf/: config.ini
conf/header/: ASM.asm  C.c  Erlang.erl  GAS.S  Go.go  Java.java  Python.py  Python.vm  SML.sml  SQL.sql  Shell.sh  Spice.sp  VHDL.vhd  Vim.vim
copyrighter/: .gitignore  requirements.txt  setup.py
copyrighter/conf/header/: Go.vm
copyrighter/scripts/: copyrighter.py
copyrighter/src/scripts/: copyrighter.py
plugin/: header.vim
rplugin/python3/: copyrighter.py  copyrighter_test.py
src/copyrighter/: __init__.py  copyrighter.py
vim/plugin/: header.vim
