[tool.poetry]
name = "vim-header"
version = "0.1.0"
description = "Easily adds brief author info and license headers"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "^0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
